# gtk-hello-world

./: CMakeLists.txt  Readme.md  flake.nix  main.cpp  run.sh
